# tvaf-btn

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .style.yapf  FAQ.md  README.rst  mypy.ini  pylintrc  pyproject.toml  setup.cfg  setup.py
tvaf/: acct.py  app.py  audit.py  auth.py  bitmap.py  btn.py  checkpoint.py  config.py  const.py  dal.py  db.py  driver.py  exceptions.py  fs.py  ftp.py  io.py  library.py  lifecycle.py  lt4604.py  ltpy.py  main.py  notify_selector.py  plex.py  plugins.py  protocol.py  request.py  requests.py  resume.py  scan.py  services.py  session.py  spaceman.py  sync.py  task.py  torrent_info.py  torrent_io.py  torrents.py  trackers.py  transmission.py  tvdb.py  (+3 more)
tvaf/cli/: btn_config.py  btn_sync.py  plex_media_scanner_shim.py  plex_media_scanner_shim_wrapper.py
tvaf/http/: __init__.py  lt.py  ltapi.py  serialization.py  util.py
tvaf/routers/: __init__.py  data.py
tvaf/tests/: __init__.py  alertdriver_test.py  app_test.py  audit_test.py  auth_test.py  btn_test.py  config_test.py  db_test.py  fs_test.py  ftp_test.py  http_lt_test.py  http_serialization_test.py  http_test.py  io_test.py  io_test_utils.py  lib.py  library_test.py  library_test_utils.py  lt4604_test.py  ltapi_test.py  ltpy_test.py  mock_time.py  notify_selector_test.py  protocol_test.py  request_test.py  request_test_utils.py  requests_test.py  resume_test.py  session_test.py  task_test.py  tdummy.py  test_utils.py  tickdriver_test.py  torrent_io_test.py  torrents_test.py  transmission_test.py  util_test.py
tvaf/tests/data/: tvaf.tests.audit_test.TestApply.test_apply_to_empty.golden.sql  tvaf.tests.audit_test.TestApply.test_apply_to_existing.golden.sql  tvaf.tests.audit_test.TestCalculate.test_changes_with_no_requests.audits.golden.json  tvaf.tests.audit_test.TestCalculate.test_deactivated_requests.audits.golden.json  tvaf.tests.audit_test.TestCalculate.test_high_priority_req_wins.audits.golden.json  tvaf.tests.audit_test.TestCalculate.test_multiple_audits.audits.golden.json  tvaf.tests.audit_test.TestCalculate.test_newer_request_wins.audits.golden.json  tvaf.tests.audit_test.TestGet.test_filter_generation.audits.golden.json  tvaf.tests.audit_test.TestGet.test_filter_infohash.audits.golden.json  tvaf.tests.audit_test.TestGet.test_filter_origin.audits.golden.json  tvaf.tests.audit_test.TestGet.test_filter_tracker.audits.golden.json  tvaf.tests.audit_test.TestGet.test_group_by_everything.audits.golden.json  tvaf.tests.audit_test.TestGet.test_group_by_generation.audits.golden.json  tvaf.tests.audit_test.TestGet.test_group_by_infohash.audits.golden.json  tvaf.tests.audit_test.TestGet.test_group_by_origin.audits.golden.json  tvaf.tests.audit_test.TestGet.test_group_by_tracker.audits.golden.json  tvaf.tests.audit_test.TestGet.test_no_grouping.audits.golden.json  tvaf.tests.audit_test.TestResolve.test_audit_high_pri_wins.audits.golden.json  tvaf.tests.audit_test.TestResolve.test_changes_with_no_requests.audits.golden.json  tvaf.tests.audit_test.TestResolve.test_deactivated_request.audits.golden.json  tvaf.tests.audit_test.TestResolve.test_half_changes_with_requests.audits.golden.json  tvaf.tests.audit_test.TestResolve.test_multiple_audits.audits.golden.json  tvaf.tests.audit_test.TestResolve.test_newer_request_wins.audits.golden.json  tvaf.tests.db_test.TestDatabase.test_schema.golden.sql  tvaf.tests.http_lt_test.TestSingleTorrent.test_valid.golden.json  tvaf.tests.http_lt_test.TestSingleTorrent.test_valid_stable.golden.json  tvaf.tests.http_lt_test.TestTorrents.test_valid_stable.golden.json  tvaf.tests.http_serialization_test.TorrentHandleSerializer.test_serialize_default_fields.golden.json  tvaf.tests.http_serialization_test.TorrentHandleSerializer.test_serialize_stable_fields.golden.json  tvaf.tests.http_serialization_test.TorrentInfoSerializerTest.test_serialize_default_fields.golden.json  tvaf.tests.http_serialization_test.TorrentInfoSerializerTest.test_serialize_stable_fields.golden.json  tvaf.tests.http_serialization_test.TorrentStatusSerializer.test_serialize_default_fields.golden.json  tvaf.tests.http_serialization_test.TorrentStatusSerializer.test_serialize_stable_fields.golden.json  tvaf.tests.ltapi_test.TestSingleTorrent.test_valid.golden.json  tvaf.tests.ltapi_test.TestSingleTorrent.test_valid_stable.golden.json  tvaf.tests.ltapi_test.TestTorrents.test_valid_stable.golden.json  tvaf.tests.requests_test.TestGet.test_get_avoid_deactivated.requests.golden.json  tvaf.tests.requests_test.TestGet.test_get_by_id.requests.golden.json  tvaf.tests.requests_test.TestGet.test_get_infohash_deactivated.requests.golden.json  tvaf.tests.requests_test.TestGetStatus.test_complete_progress.status.golden.json  (+9 more)
tvaf/tests/golden/: tvaf.tests.config_test.TestDefaults.golden.json
tvaf/tracker/: btn.py
tvaf/tracker/btn/: __init__.py  default_selectors.py  extract.py  pick.py  pipe.py  scan.py
tvaf_btn/: __init__.py
tvaf_btn/tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_torrent_info.py
typeshed/: libtorrent.pyi
