[metadata]
name = tvaf
description = An HTTP bridge for bittorrent
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/AllSeeingEyeTolledEweSew/tvaf
author = AllSeeingEyeTolledEweSew
author_email = allseeingeyetolledewesew@protonmail.com
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: File Sharing
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking

[options]
packages = find:
install_requires =
    dbver
    fastapi>=0.63.0
    pydantic>=1.8
    pymultihash
    python-libtorrent>=1.2.11
    requests
    starlette>=0.12.0
    typing_extensions>=3.7.4
    importlib_metadata;python_version<3.8
python_requires = >=3.6

[options.entry_points]
tvaf.services.shutdown =
    80_drain = tvaf.services:shutdown_drain_requests
    81_session = tvaf.services:shutdown_session
    82_alerts = tvaf.services:shutdown_drain_alerts
    98_unlock = tvaf.services:unlock_lifespan
tvaf.services.stage_config =
    50_request = tvaf.services:stage_config_request_service
    50_session = tvaf.services:stage_config_session_service
    98_disk = tvaf.services:stage_config_disk
    99_global = tvaf.services:stage_config_global
tvaf.services.startup =
    02_lock = tvaf.services:lock_lifespan
    20_alert = tvaf.services:startup_alert_driver
    20_request = tvaf.services:startup_request_service
    20_resume = tvaf.services:startup_resume_service
    30_load = tvaf.services:load_resume_data
tvaf.torrent_info.check_file_index =
    90_default = tvaf.torrent_info:check_file_index_default
tvaf.torrent_info.get_bencoded_info =
    10_session = tvaf.torrent_info:get_bencoded_info_from_session
tvaf.torrent_info.get_configure_atp =
    btn = tvaf.btn:get_configure_atp
tvaf.torrent_info.get_file_bounds =
    10_session = tvaf.torrent_info:get_file_index_from_session
tvaf.torrent_info.get_file_name =
    90_default = tvaf.torrent_info:get_file_name_default
tvaf.torrent_info.get_file_path =
    50_parsed_info = tvaf.torrent_info:get_file_path_from_parsed_info
tvaf.torrent_info.get_num_files =
    10_session = tvaf.torrent_info:get_num_files_from_session
tvaf.torrent_info.get_parsed_info =
    90_default = tvaf.torrent_info:get_parsed_info_default

[flake8]
extend-ignore =
    E203 # https://github.com/psf/black/blob/master/docs/the_black_code_style.md#slices

[mypy]
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True
mypy_path = typeshed

[mypy-apsw.*]
ignore_missing_imports = True

[mypy-tvaf.acct]
ignore_errors = True

[mypy-tvaf.spaceman]
ignore_errors = True

[mypy-setuptools.*]
ignore_missing_imports = True

[tox:tox]
isolated_build = True
envlist = py37

[testenv]
deps =
    safety
    pytest
    importlib-resources>=3.3.0
commands =
    safety check
    pytest
