[metadata]
name = tvaf_btn
description = BTN plugin for tvaf
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/AllSeeingEyeTolledEweSew/tvaf-btn
author = AllSeeingEyeTolledEweSew
author_email = allseeingeyetolledewesew@protonmail.com
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: File Sharing
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking

[options]
packages = find:
install_requires =
    btn-cache<0.2
    dbver>=0.4
    libtorrent>=2.0.4,<2.1
    requests>=2.0.0,<3
    tvaf>=0.1
python_requires = >=3.7

[options.entry_points]
tvaf.services.stage_config =
    50_btn = tvaf_btn:stage_config
tvaf.services.startup =
    50_btn = tvaf_btn:get_auth
tvaf.torrent_info.get_configure_atp =
    btn = tvaf_btn:get_configure_atp
tvaf.torrent_info.get_file_bounds =
    30_btn = tvaf_btn:get_file_bounds
    90_btn_fetch = tvaf_btn:get_file_bounds_with_fetch
tvaf.torrent_info.get_file_path =
    30_btn = tvaf_btn:get_file_path
    90_btn_fetch = tvaf_btn:get_file_path_with_fetch
tvaf.torrent_info.get_num_files =
    30_btn = tvaf_btn:get_num_files
    90_btn = tvaf_btn:get_num_files_with_fetch

[flake8]
extend-ignore =
    E203 # https://github.com/psf/black/blob/master/docs/the_black_code_style.md#slices

[mypy]
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True

[tox:tox]
isolated_build = True
envlist = py

[testenv]
deps =
    safety
    pytest
commands =
    safety check
    pytest
