[metadata]
name = tvaf_btn
description = BTN plugin for tvaf
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/AllSeeingEyeTolledEweSew/tvaf-btn
author = AllSeeingEyeTolledEweSew
author_email = asetes@pm.me
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: File Sharing
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking

[options]
packages = find:
install_requires =
    btn-cache<0.2
    dbver>=0.4
    libtorrent>=2.0.4,<2.1
    requests>=2.0.0,<3
    tvaf>=0.2.1,<0.3
python_requires = >=3.7

[options.entry_points]
tvaf.services.stage_config =
    50_btn = tvaf_btn:stage_config
tvaf.services.startup =
    50_btn = tvaf_btn:get_auth
tvaf.swarm.access_swarm =
    btn = tvaf_btn:access_swarm
tvaf.torrent_info.get_file_bounds_from_cache =
    30_btn = tvaf_btn:get_file_bounds_from_cache
    90_btn_fetch = tvaf_btn:fetch_and_get_file_bounds_from_cache
tvaf.torrent_info.is_private =
    50_btn = tvaf_btn:is_private

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True

[tox:tox]
isolated_build = True
envlist = py

[testenv]
deps =
    safety
    pytest
commands =
    safety check
    pytest
